--- a/html-css/week1/css.css
+++ b/html-css/week1/css.css
@@ -21,7 +21,7 @@ text-align-last:center;
 
 ul.address{
 padding:0% 1% 0% 1%;
-margin: 0% 1% 0% 1%;
+margin: 0px 9px 0px 9px;
 list-style-type:none;
 width: 60%;
 float: left;
