--- a/html-css/week1/css.css
+++ b/html-css/week1/css.css
@@ -22,8 +22,8 @@ text-align-last:center;
 ul.address{
 list-style-type:none;
 width: 60%;
-padding:0px 8px px 8px;
-margin: 0px 8px 0px 8px;
+padding: 0.2% 0% 0.2% 0.2%;
+margin: 1% 1% 1% 1%;
 float: left;
 align-content: flex-end;
 }
