--- a/HtmlCssCli/week3/Web_Side/main.css
+++ b/HtmlCssCli/week3/Web_Side/main.css
@@ -153,20 +153,17 @@ section:nth-of-type(2) {
   /* order:2;*/
   font-size: 1.1em;
   /* background-color: rgb(227, 243, 242);*/
-
 }
 
 section:nth-of-type(3) {
   /*order:4;*/
   font-family: 'Arial Narrow Bold', sans-serif;
   font-size: 0.7em;
-
 }
 
 section:nth-of-type(3) a article {
   margin-bottom: 10%;
-  flex: 1 0 auto;
-}
+  flex: 1 0 auto; }
 
 /*section 4*/
 section:nth-of-type(4) {
@@ -175,25 +172,19 @@ section:nth-of-type(4) {
   width: 20%;
   font-size: 0.9em;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
   /* background-color: rgb(239, 198, 243);*/
-
 }
-
-/*Remove Hyperlink Underline  */
+/* Remove Hyperlink Underline */
 section:nth-of-type(4) h3 {
   padding: 3% 0 0 4%;
   font-size: 1em;
   color: #9e1511;
-  font-weight: 700;
-}
-
+  font-weight: 700;}
 section:nth-of-type(4) #doubleLine {
   border-style: solid;
   width: 90%;
   border-width: 0.2em;
 }
-
 section hr {
   /*style for lines between articles*/
   margin: 3% 6% 4% 3%;
@@ -203,7 +194,6 @@ section hr {
   background-color: black;
   height: 0.07em;
 }
-
 /*coloring numbers in order list*/
 section:nth-of-type(4) ol {
   /*delete num*/
@@ -222,16 +212,12 @@ section:nth-of-type(4) ol li::before {
   margin-right: 0.5em;
   text-align: right;
   direction: rtl;
-  /*align */
-}
-
+  /*align */}
 /*finish coloring oeder num- in list*/
-
 /*when we hover an in any section article became it gray color*/
 section:nth-of-type(n+1) a article:hover {
   color: gray;
 }
-
 section img,
 p,
 h2 {
